+ NavBar now actually collapses properly + Colortheme from hacking-lab.com ported + CSS fixes

--- a/hlmng/WebContent/css/custom.css
+++ b/hlmng/WebContent/css/custom.css
@@ -1,3 +1,21 @@
+.content {
+	background:#000 url(../img/bg.png) repeat-x;
+	margin-top:0px;
+	color:white;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 70px;
+	bottom: 0;
+	padding-top:15px;
+}
+
+.btn-dropdown-navbar{
+	padding-top:15px;
+	padding-right: 6px;
+	padding-left: 6px;
+}
+
 .speaker-image{
     max-width: 80px;
     width: 100%;
